--- a/web/.htaccess
+++ b/web/.htaccess
@@ -3,3 +3,6 @@ RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . index.php
+php_value display_errors 1
+php_value display_startup_errors 1
+php_value error_reporting E_ALL
