--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,8 +1,6 @@
+RewriteEngine On RewriteBase /
 
-RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+
 RewriteRule . index.php
-php_value display_errors 1
-php_value display_startup_errors 1
-php_value error_reporting E_ALL
