--- a/package.json
+++ b/package.json
@@ -20,6 +20,17 @@
   },
   "homepage": "https://github.com/Miller0/basePacketFrameworkYii#readme",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "autoprefixer": "^9.8.5",
+    "cssnano": "^4.1.10",
+    "gulp": "^4.0.2",
+    "gulp-notify": "^3.2.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "node-sass": "^4.14.1"
+  },
+  "dependencies": {
+    "gulp-rename": "^2.0.0",
+    "rename": "^1.0.4"
   }
 }
